// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useRow > otel > should update the data based on component key > strictMode=false 1`] = `
{
  "_name": "test",
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA journal_mode='MEMORY'; -- we don't flush to disk before committing a write
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "sql-in-memory-select",
      "attributes": {
        "sql.cached": false,
        "sql.query": "SELECT 1 FROM 'UserInfo' WHERE id = ?",
        "sql.rowsCount": 0,
      },
    },
    {
      "_name": "sql-in-memory-select",
      "attributes": {
        "sql.cached": false,
        "sql.query": "SELECT 1 FROM 'UserInfo' WHERE id = ?",
        "sql.rowsCount": 1,
      },
    },
    {
      "_name": "LiveStore:sync",
    },
    {
      "_name": "LiveStore:mutations",
      "children": [
        {
          "_name": "LiveStore:mutate",
          "attributes": {
            "livestore.mutateLabel": "mutate",
          },
          "children": [
            {
              "_name": "LiveStore:mutate:applyMutations",
              "attributes": {
                "livestore.mutateLabel": "mutate",
              },
              "children": [
                {
                  "_name": "livestore.in-memory-db:execute",
                  "attributes": {
                    "sql.query": "INSERT INTO UserInfo (id, username) VALUES ('u2', 'username_u2')",
                  },
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "db:SELECT * FROM 'UserInfo' WHERE id = ?",
          "attributes": {
            "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
            "sql.rowsCount": 1,
          },
          "children": [
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                "sql.rowsCount": 1,
              },
            },
          ],
        },
        {
          "_name": "LiveStore:useRow:UserInfo:u1",
          "attributes": {
            "id": "u1",
          },
          "children": [
            {
              "_name": "LiveStore:mutate",
              "attributes": {
                "livestore.mutateLabel": "mutate",
              },
              "children": [
                {
                  "_name": "LiveStore:mutate:applyMutations",
                  "attributes": {
                    "livestore.mutateLabel": "mutate",
                  },
                  "children": [
                    {
                      "_name": "livestore.in-memory-db:execute",
                      "attributes": {
                        "sql.query": "INSERT INTO UserInfo (username, text, id) VALUES ($username, $text, $id)",
                      },
                    },
                  ],
                },
              ],
            },
            {
              "_name": "LiveStore:useQuery:db(row:UserInfo:u1)",
              "attributes": {
                "label": "db(row:UserInfo:u1)",
                "stackInfo": "{"frames":[{"name":"renderHook.wrapper","filePath":"__REPLACED_FOR_SNAPSHOT__"},{"name":"useRow","filePath":"__REPLACED_FOR_SNAPSHOT__"}]}",
              },
              "children": [
                {
                  "_name": "db:SELECT * FROM 'UserInfo' WHERE id = ?",
                  "attributes": {
                    "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                    "sql.rowsCount": 1,
                  },
                  "children": [
                    {
                      "_name": "sql-in-memory-select",
                      "attributes": {
                        "sql.cached": false,
                        "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                        "sql.rowsCount": 1,
                      },
                    },
                  ],
                },
                {
                  "_name": "LiveStore.subscribe",
                  "attributes": {
                    "label": "db(row:UserInfo:u1)",
                    "queryLabel": "db(row:UserInfo:u1)",
                  },
                },
              ],
            },
          ],
        },
        {
          "_name": "LiveStore:useRow:UserInfo:u2",
          "attributes": {
            "id": "u2",
          },
          "children": [
            {
              "_name": "LiveStore:useQuery:db(row:UserInfo:u2)",
              "attributes": {
                "label": "db(row:UserInfo:u2)",
                "stackInfo": "{"frames":[{"name":"renderHook.wrapper","filePath":"__REPLACED_FOR_SNAPSHOT__"},{"name":"useRow","filePath":"__REPLACED_FOR_SNAPSHOT__"}]}",
              },
              "children": [
                {
                  "_name": "db:SELECT * FROM 'UserInfo' WHERE id = ?",
                  "attributes": {
                    "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                    "sql.rowsCount": 1,
                  },
                  "children": [
                    {
                      "_name": "sql-in-memory-select",
                      "attributes": {
                        "sql.cached": false,
                        "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                        "sql.rowsCount": 1,
                      },
                    },
                  ],
                },
                {
                  "_name": "LiveStore.subscribe",
                  "attributes": {
                    "label": "db(row:UserInfo:u2)",
                    "queryLabel": "db(row:UserInfo:u2)",
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`useRow > otel > should update the data based on component key > strictMode=true 1`] = `
{
  "_name": "test",
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA journal_mode='MEMORY'; -- we don't flush to disk before committing a write
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "sql-in-memory-select",
      "attributes": {
        "sql.cached": false,
        "sql.query": "SELECT 1 FROM 'UserInfo' WHERE id = ?",
        "sql.rowsCount": 0,
      },
    },
    {
      "_name": "sql-in-memory-select",
      "attributes": {
        "sql.cached": false,
        "sql.query": "SELECT 1 FROM 'UserInfo' WHERE id = ?",
        "sql.rowsCount": 1,
      },
    },
    {
      "_name": "LiveStore:sync",
    },
    {
      "_name": "LiveStore:mutations",
      "children": [
        {
          "_name": "LiveStore:mutate",
          "attributes": {
            "livestore.mutateLabel": "mutate",
          },
          "children": [
            {
              "_name": "LiveStore:mutate:applyMutations",
              "attributes": {
                "livestore.mutateLabel": "mutate",
              },
              "children": [
                {
                  "_name": "livestore.in-memory-db:execute",
                  "attributes": {
                    "sql.query": "INSERT INTO UserInfo (id, username) VALUES ('u2', 'username_u2')",
                  },
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "db:SELECT * FROM 'UserInfo' WHERE id = ?",
          "attributes": {
            "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
            "sql.rowsCount": 1,
          },
          "children": [
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                "sql.rowsCount": 1,
              },
            },
          ],
        },
        {
          "_name": "LiveStore:useRow:UserInfo:u1",
          "attributes": {
            "id": "u1",
          },
          "children": [
            {
              "_name": "LiveStore:mutate",
              "attributes": {
                "livestore.mutateLabel": "mutate",
              },
              "children": [
                {
                  "_name": "LiveStore:mutate:applyMutations",
                  "attributes": {
                    "livestore.mutateLabel": "mutate",
                  },
                  "children": [
                    {
                      "_name": "livestore.in-memory-db:execute",
                      "attributes": {
                        "sql.query": "INSERT INTO UserInfo (username, text, id) VALUES ($username, $text, $id)",
                      },
                    },
                  ],
                },
              ],
            },
            {
              "_name": "LiveStore:useQuery:db(row:UserInfo:u1)",
              "attributes": {
                "label": "db(row:UserInfo:u1)",
                "stackInfo": "{"frames":[{"name":"renderHook.wrapper","filePath":"__REPLACED_FOR_SNAPSHOT__"},{"name":"useRow","filePath":"__REPLACED_FOR_SNAPSHOT__"}]}",
              },
              "children": [
                {
                  "_name": "db:SELECT * FROM 'UserInfo' WHERE id = ?",
                  "attributes": {
                    "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                    "sql.rowsCount": 1,
                  },
                  "children": [
                    {
                      "_name": "sql-in-memory-select",
                      "attributes": {
                        "sql.cached": false,
                        "sql.query": "SELECT * FROM 'UserInfo' WHERE id = ?",
                        "sql.rowsCount": 1,
                      },
                    },
                  ],
                },
                {
                  "_name": "LiveStore.subscribe",
                  "attributes": {
                    "label": "db(row:UserInfo:u1)",
                    "queryLabel": "db(row:UserInfo:u1)",
                  },
                },
                {
                  "_name": "LiveStore.subscribe",
                  "attributes": {
                    "label": "db(row:UserInfo:u1)",
                    "queryLabel": "db(row:UserInfo:u1)",
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
